# claude-rinda-plugin

./: .dockerignore  .env.example  .gitignore  .mcp.json  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.ko.md  README.md  claude_desktop_config.json  docker-compose.yml  release-please-config.json  settings.json
.cargo/: config.toml
.claude-plugin/: CHANGELOG.md  LICENSE  marketplace.json  plugin.json
.github/workflows/: ci.yml  release-please.yml  release.yml  sync-openapi.yml  version.yml
agents/: enrichment-agent.md  rinda-agent.md
commands/: buyer-search.md  campaign-report.md  connect.md  enrich.md  reply-check.md  sequence-create.md
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: api_helper.rs  config.rs  credentials.rs  error.rs  main.rs  oauth.rs
crates/cli/src/commands/: auth.rs  buyer.rs  campaign.rs  config.rs  email.rs  group.rs  lead.rs  mod.rs  order.rs  reply.rs  sequence.rs  workspace.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  credentials.rs  lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: auth.rs  main.rs  oauth.rs
crates/mcp-server/src/tools/: auth.rs  buyer.rs  campaign.rs  email.rs  group.rs  lead.rs  mod.rs  order.rs  reply.rs  sequence.rs  workspace.rs
crates/mcp-server/tests/: integration.rs  live_mcp.rs
crates/rinda-cli/: Cargo.toml
crates/rinda-cli/src/: credentials.rs  main.rs  oauth.rs
crates/rinda-cli/src/commands/: auth.rs  config.rs
crates/rinda-common/: Cargo.toml
crates/rinda-common/src/: config.rs  error.rs
crates/rinda-sdk/: Cargo.toml
crates/rinda-sdk/src/: client.rs  error.rs  lib.rs
crates/rinda-sdk/src/apis/: admin_api.rs  bigquery_api.rs  buyer_search_api.rs  configuration.rs  dashboard_api.rs  default_api.rs  gemini_file_search_api.rs  ipapi_api.rs  lead_discovery_api.rs  lead_enrichment_api.rs  lead_import_api.rs  leads_api.rs  manus_api.rs  mod.rs  nylas_api.rs  satisfaction_survey_api.rs  snitcher_api.rs  trial_analytics_api.rs  unipile_api.rs  utm_api.rs  visitors_api.rs  web_extraction_api.rs
crates/rinda-sdk/src/endpoints/: auth.rs  contact_enrichment.rs  dashboard.rs  email_replies.rs  lead_discovery.rs  mod.rs  sequences.rs
crates/rinda-sdk/src/models/: auth.rs  common.rs  dashboard.rs  enrichment.rs  get_api_v1_personalized_emails_list_by_sequence_id_limit_parameter.rs  leads.rs  mod.rs  post_api_v1_leads_bulk_200_response.rs  post_api_v1_leads_bulk_200_response_duplicate_emails_inner.rs  post_api_v1_leads_bulk_200_response_leads_inner.rs  post_api_v1_leads_bulk_200_response_leads_inner_created_at.rs  post_api_v1_leads_bulk_200_response_stats.rs  post_api_v1_visitors_track_request.rs  replies.rs  sequences.rs
crates/sdk/: Cargo.toml  build.rs
crates/sdk/src/: lib.rs
doc/: ARCHITECTURE.md  CLI_API_STATUS.md  FLOWS.md  PLAN_CLI_WRAPPER.md  RINDA_Claude_Cowork_사용가이드.md  RINDA_Cowork_Plugin_DevGuide_EN (1).md  RINDA_Slack_가이드.md  openapi-patched.json  openapi.json
hooks/: hooks.json
plugins/rinda-ai/.claude-plugin/: plugin.json
plugins/rinda-ai/agents/: rinda-agent.md
plugins/rinda-ai/hooks/: hooks.json
plugins/rinda-ai/skills/rinda/: SKILL.md
plugins/rinda-ai/skills/rinda/references/: email-writing.md  export-sales.md
plugins/rinda-ai/skills/rinda/scripts/: install.sh
scripts/: generate_sdk.py  patch_openapi.py
skills/buyer-qualification/: SKILL.md
skills/buyer-search/: SKILL.md
skills/campaign-report/: SKILL.md
skills/email-writing/: SKILL.md
skills/enrich/: SKILL.md
skills/export-sales/: SKILL.md
skills/reply-check/: SKILL.md
skills/sequence-create/: SKILL.md
