[workspace]
resolver = "2"
members = ["crates/sdk", "crates/common", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/FINGU-GRINDA/claude-rinda-plugin"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
