[package]
name = "rinda-cli"
version = "0.1.3" # x-release-please-version
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rinda"
path = "src/main.rs"

[dependencies]
rinda-sdk = { path = "../sdk" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
open = "5"
axum = "0.8"
fs2 = "0.4"
base64 = "0.22"
urlencoding = "2"
dirs = "6"
uuid = { version = "1", features = ["serde"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
