[package]
name = "rinda-cli"
version = "0.1.8" # x-release-please-version
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rinda"
path = "src/main.rs"

[dependencies]
rinda-sdk = { path = "../sdk" }
rinda-common = { path = "../common" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
open = "5"
axum = "0.8"
base64 = "0.22"
urlencoding = "2"
uuid = { version = "1", features = ["serde"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
