[package]
name = "rinda-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs = "6"
fs2 = "0.4"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
