[package]
name = "rinda-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rinda-mcp"
path = "src/main.rs"

[dependencies]
rinda-sdk = { path = "../sdk" }
rinda-common = { path = "../common" }
rmcp = { version = "1.1.1", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
schemars = "0.8"
uuid = { version = "1", features = ["serde"] }
chrono = "0.4"
axum = "0.8"
tokio-util = { version = "0.7" }
http = "1"
tower = "0.5"
dashmap = "6"
urlencoding = "2"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time", "process", "io-util"] }
serde_json = { workspace = true }
reqwest = { workspace = true }
serde_urlencoded = "0.7"
