[package]
name = "rinda-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rinda"
path = "src/main.rs"

[dependencies]
rinda-common = { path = "../rinda-common" }
rinda-sdk = { path = "../rinda-sdk" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
open = "5"
axum = "0.8"
fs2 = "0.4"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
