[package]
name = "rinda-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json", "multipart", "query"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { version = "3", default-features = false, features = ["base64", "std", "macros"] }
serde_repr = "0.1"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
